[gd_scene load_steps=15 format=3 uid="uid://ddtr36qj6ura0"]

[ext_resource type="Texture2D" uid="uid://cb3i7h0l7nltw" path="res://Assets/background_glacial_mountains_lightened.png" id="1_1m285"]
[ext_resource type="Script" path="res://Scripts/battle.gd" id="1_mb07o"]
[ext_resource type="Texture2D" uid="uid://sh3baej7owy" path="res://Assets/Fantasy Battlers - Free/x2 size/01.png" id="2_w0k0b"]
[ext_resource type="Resource" uid="uid://byp4sk6w51hvo" path="res://Resources/mob1.tres" id="2_wu26b"]
[ext_resource type="PackedScene" uid="uid://dimoxwv18d2ph" path="res://Scenes/in_game_ui.tscn" id="3_xfe76"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mqhmm"]
bg_color = Color(0.896416, 0, 0.100858, 1)
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j7f5e"]
bg_color = Color(0.113413, 0.789354, 0.121292, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s63m1"]
bg_color = Color(0, 0, 0, 0.788235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x0wy8"]
bg_color = Color(0, 0, 0, 0.929412)

[sub_resource type="Animation" id="Animation_fepym"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy_Container/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Enemy_Container:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xo0j2"]
resource_name = "enemy_damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy_Container/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hchwu"]
resource_name = "enemy_death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy_Container:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_8fe2f"]
resource_name = "screen_shake"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.3, 0.366667, 0.4, 0.433333, 0.466667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, -6), Vector2(-8, -4), Vector2(-4, -29), Vector2(13, -25), Vector2(0, 0), Vector2(10, -6), Vector2(-8, -4), Vector2(-4, -29), Vector2(13, -25), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hdswp"]
_data = {
"RESET": SubResource("Animation_fepym"),
"enemy_damaged": SubResource("Animation_xo0j2"),
"enemy_death": SubResource("Animation_hchwu"),
"screen_shake": SubResource("Animation_8fe2f")
}

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mb07o")
enemy = ExtResource("2_wu26b")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1m285")

[node name="damagemsg" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -549.0
offset_top = 185.0
offset_right = -167.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.0241761, 0.676264, 0.792509, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 40

[node name="Enemy_Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -105.0
offset_right = 193.0
offset_bottom = 211.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="Enemy_Container"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 35
theme_override_styles/background = SubResource("StyleBoxFlat_mqhmm")
theme_override_styles/fill = SubResource("StyleBoxFlat_j7f5e")
value = 69.0
show_percentage = false

[node name="Label" type="Label" parent="Enemy_Container/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "HP: 69/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enemy" type="TextureRect" parent="Enemy_Container"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_w0k0b")
stretch_mode = 5

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -77.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_s63m1")

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -27.5
offset_right = -40.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "PLAYER"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 35
theme_override_styles/background = SubResource("StyleBoxFlat_mqhmm")
theme_override_styles/fill = SubResource("StyleBoxFlat_j7f5e")
value = 69.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "HP: 88/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 109.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x0wy8")

[node name="HBoxContainer" type="HBoxContainer" parent="TextPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 200
alignment = 1

[node name="repcount" type="Label" parent="TextPanel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "REP COUNT: 0"

[node name="monster" type="Label" parent="TextPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1

[node name="exercise" type="Label" parent="TextPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1

[node name="inGameUI" parent="." instance=ExtResource("3_xfe76")]
layout_mode = 1
offset_left = 376.0
offset_top = -307.0
offset_right = -24.0
offset_bottom = -307.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hdswp")
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="PlayerTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="PlayerTimer" to="." method="_on_player_timer_timeout"]
